fix: missing colors

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
   --rounded: 8px;
   --code-background: rgb(245, 244, 243);
   --outline-color: rgb(212, 210, 210);
+  --gray-text: rgb(128, 128, 128);
 
   --color-prettylights-syntax-comment: #59636e;
   --color-prettylights-syntax-constant: #0550ae;
